@@ -11,13 +11,13 @@ MIDIboxSEQ V4.078
 
    o removed MSD (mass storage device) mode to save some memory.
      With the MIOS Filebrowser (integrated into MIOS Studio) this mode has a good
-     replacement anyhow. For direct access to the SD Card another application (like
+     replacement meanwhile. For direct access to the SD Card another application (like
      MIDIO128) could be temporary uploaded... or the SD Card can be plugged into
      a common SD Card reader.
 
    o experimental: if Live mode or a MIDI Router based "Track" or "Sel.Trk" is active,
      and Note, CC, PitchBender, Program Change is received on the selected IN Port,
-     the corresponding track layer will be temporary muted for 1 step.
+     the corresponding track layer (or LFO CC) will be temporary muted for 1 step.
      This allows to temporary overrule events generated by the sequencer from
      an external MIDI keyboard or controller.
 
@@ -26,6 +26,9 @@ MIDIboxSEQ V4.078
      page. The remaining tracks are controlled from the 15 consecutive CCs.
      E.g. if the CC number is set to 16, the mutes of track 1-16 are controlled with
      CC#16 .. CC#31
+
+   o Trigger/Layer/303 edit view working again
+
 
 MIDIboxSEQ V4.077
 ~~~~~~~~~~~~~~~~~
